--- a/src/main/webapp/public/scss/navigation.scss
+++ b/src/main/webapp/public/scss/navigation.scss
@@ -9,6 +9,181 @@
  */
 @import "mixins";
 
+.navigation ul li.is-selected a {
+  color: #FFF;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
+}
+
+.navigation ul li.has-children {
+  background: url(../images/left-arrow.png) no-repeat 95% center;
+  padding-right: 10px;
+}
+
+.navigation ul li:hover > .submenu {
+  display: block !important;
+}
+
+.icon-rss {
+  color: #fff;
+}
+
+.navigation-locale-bar {
+  .locale-container {
+    ul {
+      z-index: 2;
+      top: -41px;
+      bottom: auto;
+      li {
+        color: white;
+        a {
+          color: white;
+        }
+        .selected {
+          color: #ccc;
+        }
+      }
+    }
+  }
+}
+
+.is-nav-link-selected {
+  background: #19565A;
+  @include box-shadow(inset 1px 1px 1px rgba(0, 0, 0, 0.2));
+  border-radius: 3px;
+}
+
+#networkWarningPopup {
+  background: white;
+  color: black;
+  @include box-shadow(0 0 15px rgba(0, 0, 0, 0.98));
+  top: 33px;
+  bottom: auto;
+  left: auto;
+  right: 0px;
+  width: 210px;
+  font-size: 1em;
+  &:after {
+    border-top: 0;
+    border-bottom: 7px solid white;
+    top: -7px;
+    left: auto;
+    right: 20px;
+  }
+  div {
+    font-weight: normal;
+    text-align: left;
+  }
+  .icon-exclamation-sign {
+    font-size: 1.2em;
+    width: 1em;
+    color: #cd1e24;
+  }
+}
+
+.link-minimize {
+  .icon-remove {
+    color: #737373;
+  }
+  &:hover {
+    text-decoration: none;
+    .icon-remove {
+      color: black;
+    }
+  }
+}
+
+/*
+Colors
+
+Primary color used in OpenLMIS is presented below.
+
+markup:
+<div class="navigation"/>
+
+Styleguide 1.2
+*/
+
+/*
+Navigation
+
+Navigation in OpenLMIS
+
+Styleguide 2.0
+*/
+
+/*
+Navigation bar
+
+Navigation bar in OpenLMIS can include links, lists of links called submenu and headings providing description for these items.
+
+markup:
+<form style="height: 240px;">
+  <div class="navigation toggleFullScreen">
+    <ul class="clearfix">
+      <li>
+        <a href="">Home</a>
+      </li>
+      <li>
+        <a href="">Requisition</a>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="">Create / Authorize</a>
+            </li>
+            <li>
+              <a href="">Approve</a>
+            </li>
+            <li>
+              <a href="">Convert to Order</a>
+            </li>
+            <li>
+              <a href="">View</a>
+            </li>
+            <li class="beak"></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <a href="">Administration</a>
+        <div class="submenu">
+          <ul>
+            <li>
+              <a href="">Upload</a>
+            </li>
+            <li>
+              <a href="">Configure</a>
+	        <div class="submenu">
+	          <ul>
+		    <li>
+		      <a href="">R & R Template</a>
+		    </li>
+                    <li>
+		      <a href="">Regimen Template</a>
+		    </li>
+                    <li>
+		      <a href="">Program Product ISA</a>
+		    </li>
+		    <li>
+		      <a href="">System Setings</a>
+		    </li>
+		    <li>
+		      <a href="">Other Setings</a>
+		    </li>
+		    <li class="beak"></li>
+		  </ul>
+	      </div>
+            </li>
+            <li class="beak"></li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </div>
+</form>
+
+Styleguide 2.1
+*/
+
 .navigation {
   background: #42a7ad;
   background: -moz-linear-gradient(top, #0d8d98 0%, #0d6369 100%); /* FF3.6+ */
@@ -119,25 +294,31 @@
   }
 }
 
-.navigation ul li.is-selected a {
-  color: #FFF;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
-}
+/*
+Manage menu
 
-.navigation ul li.has-children {
-  background: url(../images/left-arrow.png) no-repeat 95% center;
-  padding-right: 10px;
-}
+Manage menu in OpenLMIS is meant to be bookmarks displaying current state of the UI.
 
-.navigation ul li:hover > .submenu {
-  display: block !important;
-}
+markup:
+<div class="manage-nav">
+  <ul class="clearfix">
+    <li>
+      <a href="">Facilities</a>
+    </li>
+    <li>
+      <a href="">Roles</a>
+    </li>
+    <li class="selected">
+      <a href="">Schedules</a>
+    </li>
+    <li>
+      <a href="">Users</a>
+    </li>
+  </ul>
+</div>
 
-.icon-rss {
-  color: #fff;
-}
-
-//tabs for admin
+Styleguide 2.2
+*/
 
 .manage-nav {
   font-size: 0.9em;
@@ -180,71 +361,6 @@
     text-shadow: 0 1px 0 #FFF;
     &:hover {
       text-decoration: none;
-    }
-  }
-}
-
-.navigation-locale-bar {
-  .locale-container {
-    ul {
-      z-index: 2;
-      top: -41px;
-      bottom: auto;
-      li {
-        color: white;
-        a {
-          color: white;
-        }
-        .selected {
-          color: #ccc;
-        }
-      }
-    }
-  }
-}
-
-.is-nav-link-selected {
-  background: #19565A;
-  @include box-shadow(inset 1px 1px 1px rgba(0, 0, 0, 0.2));
-  border-radius: 3px;
-}
-
-#networkWarningPopup {
-  background: white;
-  color: black;
-  @include box-shadow(0 0 15px rgba(0, 0, 0, 0.98));
-  top: 33px;
-  bottom: auto;
-  left: auto;
-  right: 0px;
-  width: 210px;
-  font-size: 1em;
-  &:after {
-    border-top: 0;
-    border-bottom: 7px solid white;
-    top: -7px;
-    left: auto;
-    right: 20px;
-  }
-  div {
-    font-weight: normal;
-    text-align: left;
-  }
-  .icon-exclamation-sign {
-    font-size: 1.2em;
-    width: 1em;
-    color: #cd1e24;
-  }
-}
-
-.link-minimize {
-  .icon-remove {
-    color: #737373;
-  }
-  &:hover {
-    text-decoration: none;
-    .icon-remove {
-      color: black;
     }
   }
 }
