OLMIS-1030: Put styles in vendor.css and app.css
Changed build process to create 2 primary CSS files, one that pulls together vendor
files, while the other is created by compiling app.css. There are still
additional CSS files being created.

HTML pages for index, login, and RnR were updated for new styles.
Style guide has styles updated also.

--- a/src/main/webapp/public/scss/app.scss
+++ b/src/main/webapp/public/scss/app.scss
@@ -23,3 +23,6 @@
 @import "equipment";
 @import "facility-selector-directive";
 @import "ivd-form";
+
+@import "rnr-view";
+@import "rnr-mmia-view";
