--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -1,6 +1,11 @@
 //Colors
 
-$heading-green: #17888F !default;
+$heading-green: #17888F;
 $green: #356b6f;
 $red: #da4f49;
+
+$white: #ffffff;
+$light-gray: #dddddd;
 $gray: #666666;
+$dark-gray: #333333;
+$black: #000000;
