--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -1,12 +1,3 @@
-/*
- * This program is part of the OpenLMIS logistics management information system platform software.
- * Copyright © 2013 VillageReach
- *
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
- *  
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
- * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
- */
 
 .page {
   margin: 12px 12px 0px;
@@ -262,7 +253,7 @@ span[class^="tpl-"] {
       font-size: 0.9em;
 
       .drag-handle {
-        @include size(16px, 12px);
+        @include size(16px 12px);
         margin-top: -9px;
         position: absolute;
         top: 50%;
@@ -347,7 +338,7 @@ span[class^="tpl-"] {
       margin-left: 13px;
     }
     .drag-handle {
-      @include size(16px, 12px);
+      @include size(16px 12px);
       position: absolute;
       top: 33%;
       left: 9px;
@@ -393,7 +384,7 @@ span[class^="tpl-"] {
 }
 
 .rnr-template-columns input[type="text"] {
-  @include size(18px, 70%);
+  @include size(18px 70%);
   margin-bottom: 2px;
   font-size: 1em;
 }
@@ -836,7 +827,7 @@ table td.cell-input .display-block, .display-block {
 }
 
 .cell-input input[type="text"], .cell-input select {
-  @include size(29px, 96%);
+  @include size(29px 96%);
   padding: 0 3px;
   margin: 2px 2px;
   border: 1px solid #BBB;
@@ -1370,7 +1361,7 @@ table td.delete-button {
 }
 
 .gridStyle {
-  @include size(400px, 100%);
+  @include size(400px 100%);
   border: 1px solid rgb(212, 212, 212);
 }
 
@@ -1383,7 +1374,7 @@ table td.delete-button {
 }
 
 .roleGrid {
-  @include size(200px, 100%);
+  @include size(200px 100%);
   border: 1px solid rgb(212, 212, 212);
 }
 
@@ -1470,7 +1461,7 @@ table td.delete-button {
 }
 
 .suggest-field {
-  @include size(20px, 87%);
+  @include size(20px 87%);
   padding: 4px 6px;
   position: relative;
   @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
@@ -1478,7 +1469,7 @@ table td.delete-button {
   border-radius: 4px;
   background-color: #FFF;
   input[type="text"] {
-    @include size(20px, 100%);
+    @include size(20px 100%);
     padding: 0;
     @include box-shadow(none);
     border: 0 none;
@@ -1546,7 +1537,7 @@ table td.delete-button {
 }
 
 .ngSortButtonDown, .ngSortButtonUp {
-  @include size(5px, 20px);
+  @include size(5px 20px);
   top: 12px;
   right: 10px;
   left: auto;
@@ -2535,7 +2526,7 @@ div.input-div[disabled] {
 }
 
 .associate-facility.input-div {
-  @include size(28px, 88.5%);
+  @include size(28px 88.5%);
   padding: 0;
   &:hover {
     cursor: pointer;
