--- a/src/main/webapp/public/common/mixins.scss
+++ b/src/main/webapp/public/common/mixins.scss
@@ -8,13 +8,8 @@
  * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
  */
 
-@mixin size($height, $width){
-  height: $height;
-  width: $width;
-}
-
 @mixin square($side){
-  @include size($side, $side);
+  @include size($side $side);
 }
 
 @mixin box-shadow($shadow){
